NT/ds/security/cryptoapi/pkitrust/tests/signing/bad/sig_pcb.cab
version https://git-lfs.github.com/spec/v1
oid sha256:2b6a02b2b0212538499abedc6802a46885417212ee6b735d4379218efc603c8f
size 55876
